Fixed some layout issues and added some better error messages.

--- a/WebContent/css/catalog.css
+++ b/WebContent/css/catalog.css
@@ -2,8 +2,9 @@
 
 
 * {
-	font-size: 11.5; 
+	font-size: 11; 
 }
+
 
 body {
 	margin: 0px;
