--- a/WebContent/css/menu.css
+++ b/WebContent/css/menu.css
@@ -1,6 +1,6 @@
 .menutab {
 	height:23px;
-	width:700px;
+	width:99%;
 }
 .menutab ul {
 	margin:0px; 
@@ -25,17 +25,15 @@
 .menutab li a.tabactive {
 	border-left:1px solid #AAAAAA; 
 	border-right:1px solid #AAAAAA;
-	border-top:1px solid #AAAAAA; 
+	border-top:1px solid #AAAAAA;
 	background-color:#0099CC; 
 	font-weight:bold;  
-	
 	position:relative;
 }
 
 .tabcontent {
 	border:1px solid #AAAAAA; 
 	width:699px; 
-	
 	padding:6px 0px; 
 	font-size:12px; 
 	margin-bottom:5px;
@@ -43,18 +41,19 @@
 
 
 .infoTab{
-	width:100%; 
-	height:100%; 
+	width:99%; 
+	height:99%; 
 	display:block; 
 	position:relative; 
 	background-color: #FFFFFF; 
-	overflow:auto; 
+	overflow:hidden; 
 	z-index:142;
+	border: 1px solid #2b66a5;
 }
 	
 	.infoTabL {
 	width:95%; height:90%; bottom:0px;display:block; position:relative; top:0px; left:0px; background-color: #FFFFFF; overflow:auto; z-index:142;border:1px solid #AAAAAA;
- filter:alpha(opacity=60);-moz-opacity:0.6;background-repeat:no-repeat;background-position: 40% 40%;background-image: url('/catalogConnector/images/loader.gif');right:10px;bottom:10px;
+ 	filter:alpha(opacity=60);-moz-opacity:0.6;background-repeat:no-repeat;background-position: 40% 40%;background-image: url('/catalogConnector/images/loader.gif');
 
  /* If you set a fix height set overflow to auto and you will get a
     scrollbar when necessary */
